// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput renders a button that triggers the calendar 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cEaRAi FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 cZMQob"
          id="dob"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gIwxCa"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 jhkXfM"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jBZmdr"
            />
            Pick a date and call me Jim
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gjUENu FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 czUFue"
              disabled=""
              id="dob"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cEaRAi FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 eutqcj"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="dob"
      >
        Date of birth
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hhNxug"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 cEaRAi FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 eutqcj"
              id="dob"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cEaRAi FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 eutqcj"
              id="dob"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 pdsPm FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 eutqcj"
              id="dob"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cbXpay"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cEaRAi FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eyswMs"
        >
          <div
            class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 isHkTG"
          >
            <input
              autocomplete="off"
              class="StyledMaskedInput-sc-99vkfa-0 eutqcj"
              id="dob"
              placeholder="yyyy-mm-dd"
              value=""
            />
          </div>
          <button
            class="StyledButtonKind-sc-1vhfpnt-0 cvzOXB"
            type="button"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 IRzGQ"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bWzGTv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
